src/styles.css
@font-face { font-family: myFont; src: url('assets/myFont.otf'); }

body {
  background-color: black;
  color: white;
  font-family: myFont;
}

a {cursor: pointer; color: gray;}
a:hover {
    color: white;
}

.clickable {cursor: pointer}

.rounded {
  border-radius: 10px;
  border: solid 8px white;
  padding: 10px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.contains-columns {
    margin-left: 30px;
    margin-right: 30px;
    max-width: 95%;
  }

#input {
  color: black;
}

textarea {
  resize: vertical;
}

@media (max-width: 1200px) {
    .contains-columns {
    margin-left: 30px;
    margin-right: 30px;
    max-width: 94%;
  }
}

